# openapi-youtrack

./: README.md  openapi.json  pyproject.toml
you_track_rest_api_client/api/default/: delete_admin_custom_field_settings_bundles_build_id.py  delete_admin_custom_field_settings_bundles_build_id_values_build_bundle_element_id.py  delete_admin_custom_field_settings_bundles_enum_id.py  delete_admin_custom_field_settings_bundles_enum_id_values_enum_bundle_element_id.py  delete_admin_custom_field_settings_bundles_owned_field_id.py  delete_admin_custom_field_settings_bundles_owned_field_id_values_owned_bundle_element_id.py  delete_admin_custom_field_settings_bundles_state_id.py  delete_admin_projects_id.py  (+173 more)
you_track_rest_api_client/models/: activity_category.py  agile_column_field_value.py  agile_status.py  appearance_settings.py  attribute_based_swimlane_settings.py  backup_error.py  backup_file.py  backup_status.py  base_bundle.py  base_work_item.py  bit_bucket_server.py  bitbucket_standalone_server.py  build_bundle_element.py  bundle.py  bundle_element.py  color_coding.py  command_visibility.py  database_attribute_value.py  date_format_descriptor.py  duration_value.py  email_settings.py  enum_bundle_element.py  event.py  external_article.py  external_issue.py  field_style.py  field_type.py  filter_field.py  general_user_profile.py  git_hub_server.py  git_lab_server.py  gitea_server.py  global_settings.py  gogs_server.py  issue_based_swimlane_settings.py  issue_count_response.py  issue_folder.py  issue_link_direction.py  issue_link_type.py  jabber_settings.py  (+37 more)
